# mlir

./: CMakeCache.txt  vecmat.patch
flang/include/flang/Optimizer/Dialect/: FIRDialect.h
mlir/include/mlir/Dialect/Linalg/: Passes.h  Passes.td
mlir/include/mlir/Dialect/Linalg/IR/: LinalgStructuredOps.td
mlir/include/mlir/Dialect/StandardOps/IR/: Ops.td
mlir/include/mlir/IR/: AffineExpr.h  Matchers.h
mlir/include/mlir/Transforms/: Passes.h  Passes.td
mlir/lib/Conversion/AffineToStandard/: AffineToStandard.cpp
mlir/lib/Conversion/LinalgToLLVM/: LinalgToLLVM.cpp
mlir/lib/Dialect/GPU/Transforms/: AsyncRegionRewriter.cpp
mlir/lib/Dialect/Linalg/IR/: LinalgOps.cpp
mlir/lib/Dialect/Linalg/Transforms/: CMakeLists.txt  Chain.cpp  LinalgToLoops.cpp  LinalgTransforms.cpp
mlir/lib/Transforms/: MemRefDataFlowOpt.cpp
mlir/test/IR/: test-matchers.mlir
mlir/test/lib/DeclarativeTransforms/: TestLinalgTransformPatterns.td
mlir/test/lib/IR/: TestMatchers.cpp
mlir/test/mlir-cpu-runner/: CMakeLists.txt  mlir_test_cblas_interface.cpp
mlir/test/mlir-cpu-runner/include/: mlir_test_cblas_interface.h
mlir/tools/mlir-pet/: CMakeLists.txt  Ops.cpp.inc  Ops.h.inc  Ops.td  ShapeInferenceOpInterfaces.cpp.inc  ToyCombine.td  mlir-pet.cc  shapedecls.txt
mlir/tools/mlir-pet/Lib/: detection.cc  detection.h  islNodeBuilder.cc  islNodeBuilder.h  mlirCodegen.cc  mlirCodegen.h
mlir/tools/mlir-pet/Lib/Toy/: Ops.td  ShapeInferenceInterface.h  ShapeInferencePass.cpp  Toy.cc  Toy.h  ToyCombine.cpp  ToyCombine.inc
mlir/tools/mlir-pet/Test/: ternary.mlir
mlir/tools/mlir-pet/Test/Inputs/: 3gemm.c  atax.c  bicg.c  gemm.c  gemver.c  matmul.c  matmul.mlir  mvt.c  transpose.c  trmm.c
